# internal/auth/api/gen/types.gen.go
@@ -1,0 +1,64 @@
+// Package gen provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
+package gen
+
+// Defines values for TokenRequestGrantType.
+const (
+	ClientCredentials TokenRequestGrantType = "client_credentials"
+)
+
+// ErrorResponse defines model for ErrorResponse.
+type ErrorResponse struct {
+	Error            string  `json:"error"`
+	ErrorDescription *string `json:"error_description,omitempty"`
+}
+
+// Jwk JSON Web Key
+type Jwk struct {
+	// Alg Алгоритм подписи (например, "RS256")
+	Alg string `json:"alg"`
+
+	// E Экспонента RSA в base64url
+	E string `json:"e"`
+
+	// Kid Уникальный идентификатор ключа
+	Kid string `json:"kid"`
+
+	// Kty Тип ключа (обычно "RSA")
+	Kty string `json:"kty"`
+
+	// N Модуль RSA в base64url
+	N string `json:"n"`
+
+	// Use Назначение ключа (обычно "sig")
+	Use string `json:"use"`
+}
+
+// Jwks JSON Web Key Set
+type Jwks struct {
+	Keys []Jwk `json:"keys"`
+}
+
+// TokenRequest defines model for TokenRequest.
+type TokenRequest struct {
+	ClientId     string                `json:"client_id"`
+	ClientSecret string                `json:"client_secret"`
+	GrantType    TokenRequestGrantType `json:"grant_type"`
+}
+
+// TokenRequestGrantType defines model for TokenRequest.GrantType.
+type TokenRequestGrantType string
+
+// TokenResponse defines model for TokenResponse.
+type TokenResponse struct {
+	// AccessToken JWT, подписанный RS256
+	AccessToken string `json:"access_token"`
+
+	// ExpiresIn Время жизни токена в секундах
+	ExpiresIn int    `json:"expires_in"`
+	TokenType string `json:"token_type"`
+}
+
+// PostOauthTokenFormdataRequestBody defines body for PostOauthToken for application/x-www-form-urlencoded ContentType.
+type PostOauthTokenFormdataRequestBody = TokenRequest
